--- a/kubernetes/monailabel-service.yaml
+++ b/kubernetes/monailabel-service.yaml
@@ -1,13 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: monailabel-service
+  name: monailabel
+  labels:
+    run: monailabel
 spec:
+  ports:
+  - port: 8000
+    targetPort: 8000
+    nodePort: 30900
+    protocol: TCP
   type: NodePort
   selector:
     app: monailabel
-  ports:
-    - port: 22
-      targetPort: 22
-      name: ssh
-      protocol: TCP
